--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "next",
+    "build": "next build && next export",
+    "export": "next export"
   },
   "dependencies": {
+    "bootstrap": "^4.5.0",
+    "google-map-react": "^1.1.7",
     "next": "9.4.4",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-icons": "^3.10.0",
+    "react-id-swiper": "^3.0.0",
+    "sass": "^1.26.7",
+    "swiper": "^5.4.1"
   }
 }
